Fixed #23 Sticky productions are not showing up in listings. Added an extar sticky production to the tests.

--- a/raw/less/style.less
+++ b/raw/less/style.less
@@ -44,6 +44,9 @@
 		> * {
 			margin: 0 0 0 25%;
 		}
+		span {
+			margin-left: 0;
+		}
 	}
 	
 	.wp_theatre_event {
